--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Santiey" target="_blank"> Santiey </a> and is
+          <a href="https://github.com/Santiey/Assignmentchallenge" target="_blank"> on GitHub</a> and
+          <a href="https://app.netlify.com/sites/frolicking-bublanina-214e4c/deploys/66ffa666211906d6e38953cb" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
